[tool.poetry]
name = "violet-webhook"
version = "1.0.0"
description = "Violet -> Salesforce webhook service for real-time candidate handoff"
authors = ["MedPro Staffing"]

[tool.poetry.dependencies]
python = ">=3.11"
flask = ">=3.0"
gunicorn = ">=21.2"
requests = ">=2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
